Configurate DbContext. Add authentication methods.

--- a/GalleryServer/API/appsettings.json
+++ b/GalleryServer/API/appsettings.json
@@ -1,5 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Gallery;Trusted_Connection=True;"
+  },
+  "pageSize": 10,
+  "postLiteSymbolCount": 100,
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
