--- a/gallery-web/package.json
+++ b/gallery-web/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -14,6 +14,7 @@
     "js-cookie": "^2.2.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
+    "vuetify": "^1.5.5",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
@@ -24,7 +25,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   },
   "eslintConfig": {
     "root": true,
