--- a/gallery-web/.env.development
+++ b/gallery-web/.env.development
@@ -1,2 +1,5 @@
 VUE_APP_AUTHENTICATION =  http://localhost:50566/api/Authentication
 VUE_APP_USERS =  http://localhost:50566/api/Users
+VUE_APP_IMAGES =  http://localhost:50566/api/Image
+VUE_APP_TAGS =  http://localhost:50566/api/Image/SaveTags
+VUE_APP_SCORE =  http://localhost:50566/api/Image/SaveScore
