Fix request to send and get images

--- a/gallery-web/.env.development
+++ b/gallery-web/.env.development
@@ -1,5 +1,6 @@
 VUE_APP_AUTHENTICATION =  http://localhost:50566/api/Authentication
 VUE_APP_USERS =  http://localhost:50566/api/Users
-VUE_APP_IMAGES =  http://localhost:50566/api/Image
-VUE_APP_TAGS =  http://localhost:50566/api/Image/SaveTags
-VUE_APP_SCORE =  http://localhost:50566/api/Image/SaveScore
+VUE_APP_IMAGE =  http://localhost:50566/api/Image
+VUE_APP_IMAGES =  http://localhost:50566/api/Images
+VUE_APP_TAGS =  http://localhost:50566/api/Tag
+VUE_APP_SCORE =  http://localhost:50566/api/Score
